--- a/css/styles.css
+++ b/css/styles.css
@@ -291,6 +291,11 @@ body{
     position: relative;
     width: calc(16.66% - 10px);
     margin-bottom: 20px;
+    transition: transform 0.3s ease;
+}
+
+.category:hover{
+    transform: translateY(-5px);
 }
 
 .category img {
